# la_wayland_weston

./: Makefile.am  configure.ac  meson.build  meson_options.txt
clients/: meson.build  pcc-setting.c  simple-gbmbuf.c  weston-qdcm-solid-color-tool.c  weston-qti-extn-test.c
compositor/: config-helpers.c  main.c  meson.build
desktop-shell/: shell.c
frontend/: main.c
libweston/: compositor-sdm.c  compositor.c  compositor.h  drm-formats.c  gbm-buffer-backend.c  gbm-buffer-backend.h  gl-renderer.c  input.c  launcher-direct.c  libweston-internal.h  log.c  meson.build  pixel-formats.c  pixman-renderer.c  pixman-renderer.h  screen-capture.c  screen-capture.h  surface-state.c  weston-qti-extn.c  weston-qti-extn.h  weston-trace.h
libweston-desktop/: internal.h  surface.c  xdg-shell.c
libweston/backend-sdm/: fb.c  kms.c  meson.build  modes.c  screen-capture.c  screen-capture.h  sdm-gbm.c  sdm-internal.h  sdm.c  state-propose.c
libweston/backend-sdm/sdm-service/: sdm_color_mode_intf.h  sdm_color_mode_intf_impl.cpp  sdm_color_mode_intf_impl.h  sdm_display.cpp  sdm_display.h  sdm_display_buffer_allocator.cpp  sdm_display_buffer_allocator.h  sdm_display_buffer_sync_handler.cpp  sdm_display_buffer_sync_handler.h  sdm_display_color_manager.cpp  sdm_display_color_manager.h  sdm_display_connect.cpp  sdm_display_connect.h  sdm_display_debugger.cpp  sdm_display_debugger.h  sdm_display_interface.h  sdm_display_qdcm_session.cpp  sdm_display_qdcm_session.h  sdm_display_socket_handler.cpp  sdm_display_socket_handler.h  sdm_display_tonemapper.cpp  sdm_display_tonemapper.h  uevent.c  uevent.h
protocol/: gbm-buffer-backend.xml  meson.build  pcc-control.xml  screen-capture.xml  weston-qti-extn.xml
sdm-service/: compositor-sdm-output.h  sdm_display.cpp  sdm_display.h  sdm_display_buffer_allocator.cpp  sdm_display_buffer_allocator.h  sdm_display_buffer_sync_handler.cpp  sdm_display_buffer_sync_handler.h  sdm_display_connect.cpp  sdm_display_connect.h  sdm_display_debugger.cpp  sdm_display_debugger.h  sdm_display_interface.h  sdm_display_socket_handler.cpp  sdm_display_socket_handler.h  sdm_display_tonemapper.cpp  sdm_display_tonemapper.h
shared/: meson.build  (+2 more)
(+30 files in other folders)
